<?sxml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/primary">
        <item
            android:id="@id/frag1"
            android:icon="@drawable/profile"
            android:title="@string/Frag1" />
    </group>

    <group android:id="@+id/f2">
        <item
            android:id="@id/frag2"
            android:icon="@drawable/contacts"
            android:title="@string/Frag2" />
    </group>

    <group android:id="@+id/f3">
        <item
            android:id="@id/frag4"
            android:icon="@drawable/editprofile"
            android:title="@string/Frag4" />
    </group>

    <group android:id="@+id/f4">
        <item
            android:id="@+id/frag5"
            android:icon="@drawable/logout"
            android:title="Logout" />
    </group>

</menu>